hydra config second commit

--- a/config/web_search/default.yaml
+++ b/config/web_search/default.yaml
@@ -1,4 +1,10 @@
 # Default web search configuration
 use_web_search: false
 exa_api_key: ""
-custom_domains: ["arxiv.org", "wikipedia.org", "github.com", "medium.com"]
+#custom_domains: ["arxiv.org", "wikipedia.org", "github.com", "medium.com"] --> not working
+
+custom_domains:
+  - "arxiv.org"
+  - "wikipedia.org"
+  - "github.com"
+  - "medium.com"
