--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,25 +1,12 @@
 name: RAG Test Runner
-
 on: [push]
-
 jobs:
   train-and-report:
     runs-on: ubuntu-latest
-    #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'  # Use Python 3.10 or higher for compatibility
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run RAG tests
+      - name: Train rag
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LANGTRACE_API_KEY: ${{ secrets.LANGTRACE_API_KEY }}
@@ -28,12 +15,7 @@ jobs:
           QDRANT_API_KEY: ${{ secrets.QDRANT_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
+          pip install -r requirements.txt
           python rag_test.py > test_results.txt 2>&1 || true
-          echo "## Test Results" > report.md
+          echo "## Test Results" >> report.md
           cat test_results.txt >> report.md
-
-      - name: Publish CML Report
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cml comment create --publish report.md
