--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -17,5 +17,6 @@ jobs:
         run: |
           pip install -r requirements.txt
           python rag_test.py > test_results.txt 2>&1 || true
-          echo "## Test Results" >> report.md
+          echo "## RAG Test Results" >> report.md
           cat test_results.txt >> report.md
+          cml comment create report.md
