--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,13 +6,12 @@ jobs:
     #container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.13'
-          
-      - name: Train rag
+      
+      - uses: iterative/setup-cml@v1    
+      
+      - name: Install requirements
+        run: |
+          pip install -r requirements.txt
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LANGTRACE_API_KEY: ${{ secrets.LANGTRACE_API_KEY }}
@@ -20,8 +19,9 @@ jobs:
           QDRANT_URL: ${{ secrets.QDRANT_URL }}
           QDRANT_API_KEY: ${{ secrets.QDRANT_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+      - name : Rag Testing  
         run: |
-          pip install -r requirements.txt
           python rag_test.py > test_results.txt 2>&1 || true
           echo "## RAG Test Results" >> report.md
           cat test_results.txt >> report.md
